# unbill

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  IMPLEMENTATION.md  README.md  devenv.nix  flake.nix  package.json  prek.toml  release.toml
.github/: DESIGN.md  IMPLEMENTATION.md
.github/aur/unbill-cli-bin/: PKGBUILD
.github/aur/unbill-cli-nightly-bin/: PKGBUILD
.github/aur/unbill-tui-bin/: PKGBUILD
.github/aur/unbill-tui-nightly-bin/: PKGBUILD
.github/workflows/: build.yml  ci.yml  nightly.yml  release-aur.yml  release.yml  version.yml
apps/: DESIGN.md
apps/unbill-cli/: Cargo.toml  DESIGN.md
apps/unbill-cli/src/: commands.rs  main.rs  output.rs
apps/unbill-cli/tests/: e2e.rs
apps/unbill-desktop/: DESIGN.md  IMPLEMENTATION.md  index.html  package.json  vite.config.ts
apps/unbill-desktop/src/: App.tsx
apps/unbill-server/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
apps/unbill-server/src/: lib.rs  main.rs  router.rs
apps/unbill-tui/: Cargo.toml  IMPLEMENTATION.md
apps/unbill-tui/src/: app.rs  main.rs
apps/unbill-tui/src/pane/: bills.rs  detail.rs  mod.rs
apps/unbill-tui/src/popup/: add_bill.rs  amend_bill.rs  invite.rs  mod.rs  settings.rs  users.rs
apps/unbill-ui-leptos/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md  index.html  style.css
apps/unbill-ui-leptos/src/: api.rs  app.rs  bridge.js  components.rs  main.rs  pages.rs
apps/unbill-ui-remote/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md  Trunk.toml  style.css
apps/unbill-ui-remote/src/: api.rs  app.rs  main.rs  pages.rs
crates/unbill-cli/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-cli/src/: commands.rs  main.rs  output.rs
crates/unbill-cli/tests/: e2e.rs
crates/unbill-core/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md  README.md
crates/unbill-core/src/: error.rs  lib.rs
crates/unbill-core/src/conflict/: DESIGN.md  IMPLEMENTATION.md  mod.rs
crates/unbill-core/src/doc/: ledger_doc.rs  mod.rs  ops.rs
crates/unbill-core/src/model/: amendment.rs  bill.rs  invite_token.rs  member.rs  mod.rs
crates/unbill-core/src/net/: DESIGN.md  IMPLEMENTATION.md  endpoint.rs  identity.rs  join.rs  mod.rs  node_id_ext.rs  protocol.rs  sync.rs
crates/unbill-core/src/service/: DESIGN.md  IMPLEMENTATION.md  inner.rs  mod.rs  service.rs
crates/unbill-core/src/settlement/: DESIGN.md  IMPLEMENTATION.md  mod.rs
crates/unbill-core/src/storage/: DESIGN.md  IMPLEMENTATION.md  fs.rs  http.rs  memory.rs  mod.rs  sqlite.rs  traits.rs
crates/unbill-event/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-event/src/: lib.rs
crates/unbill-i18n/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-i18n/src/: lib.rs
crates/unbill-model/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-model/src/: amendment.rs  bill.rs  error.rs  id.rs  lib.rs  node_id.rs  secret_key.rs  timestamp.rs  user.rs
crates/unbill-network/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-network/src/: endpoint.rs  join.rs  lib.rs  node_id_ext.rs  store_helpers.rs  sync.rs
crates/unbill-server-client/: Cargo.toml  DESIGN.md
crates/unbill-server-client/src/: lib.rs
crates/unbill-storage/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-storage/src/: device_meta.rs  doc.rs  lib.rs  ops.rs  store.rs
crates/unbill-store-fs/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-store-fs/src/: lib.rs
crates/unbill-store-http/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-store-http/src/: lib.rs
crates/unbill-store-memory/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-store-memory/src/: lib.rs
crates/unbill-tauri/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md  tauri.conf.json  tauri.leptos.conf.json
crates/unbill-tauri/icons/: icon.icns
crates/unbill-tauri/ios/: project.yml
crates/unbill-tauri/src/: lib.rs  main.rs
crates/unbill-tui/: DESIGN.md  IMPLEMENTATION.md
crates/unbill-tui/src/: app.rs  ui.rs
crates/unbill-tui/src/pane/: bills.rs  detail.rs  mod.rs
crates/unbill-tui/src/popup/: device.rs  invite.rs  ledger_settings.rs  mod.rs  settlement.rs
crates/unbill-ui-components/: Cargo.toml  DESIGN.md  style.css
crates/unbill-ui-components/src/: bill.rs  button.rs  input.rs  layout.rs  ledger.rs  lib.rs  settlement.rs  status.rs  user.rs
docker/: Caddyfile  entrypoint.sh
nix/: unbill-cli.nix  unbill-tui.nix
