[package]
name = "unbill-tui"
description = "Terminal UI for unbill."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "unbill-tui"
description = "Terminal UI for unbill."
path = "src/main.rs"

[dependencies]
unbill-core = { path = "../../crates/unbill-core" }
unbill-store-fs = { path = "../../crates/unbill-store-fs" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
