[package]
name = "unbill-ui-leptos"
description = "Leptos web frontend for unbill."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8.14", features = ["csr"] }
unbill-ui-components = { path = "../../crates/unbill-ui-components" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "Window"] }
