[package]
name = "unbill-ui-remote"
description = "Browser web frontend for unbill."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8.14", features = ["csr"] }
unbill-ui-components = { path = "../../crates/unbill-ui-components" }
unbill-core = { path = "../../crates/unbill-core" }
unbill-store-http = { path = "../../crates/unbill-store-http" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Clipboard", "Event", "EventTarget", "Navigator", "Window"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
getrandom3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom4 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
