[package]
name = "unbill-core"
description = "The core library for unbill — CRDT ledger, persistence, and P2P sync."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
unbill-model = { path = "../unbill-model" }
unbill-event = { path = "../unbill-event" }
unbill-storage = { path = "../unbill-storage" }
unbill-network = { path = "../unbill-network", optional = true }
automerge.workspace = true
autosurgeon.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
ulid.workspace = true
iso_currency.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
directories.workspace = true

[features]
network = ["dep:unbill-network"]

[dev-dependencies]
unbill-model = { path = "../unbill-model", features = ["test-helpers"] }
unbill-store-memory = { path = "../unbill-store-memory" }
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
