[package]
name = "unbill-network"
description = "P2P networking layer for unbill — Iroh endpoint, sync and join protocols."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
unbill-model = { path = "../unbill-model" }
unbill-storage = { path = "../unbill-storage" }
unbill-event = { path = "../unbill-event" }
iroh.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
automerge.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
unbill-model = { path = "../unbill-model", features = ["test-helpers"] }
unbill-store-memory = { path = "../unbill-store-memory" }
tokio = { workspace = true, features = ["test-util"] }
