[package]
name = "unbill-server-client"
description = "Typed HTTP client for unbill-server operational endpoints (peer sync, invite, join)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json"] }

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["test-util"] }
