[package]
name = "unbill-storage"
description = "Storage interface and CRDT document layer for unbill — LedgerStore trait and LedgerDoc."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
unbill-model = { path = "../unbill-model" }
automerge.workspace = true
autosurgeon.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
unbill-model = { path = "../unbill-model", features = ["test-helpers"] }
