[package]
name = "unbill-store-fs"
description = "Flat-file LedgerStore implementation for unbill."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
unbill-storage = { path = "../unbill-storage" }
unbill-model = { path = "../unbill-model" }
async-trait.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
