[package]
name = "unbill-store-http"
description = "HTTP-backed LedgerStore implementation for unbill."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
unbill-storage = { path = "../unbill-storage" }
unbill-model = { path = "../unbill-model" }
async-trait.workspace = true
serde.workspace = true
serde_json = "1"
automerge.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json"] }

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["test-util"] }
