[package]
name = "unbill-store-memory"
description = "In-memory LedgerStore implementation for unbill — primarily for tests."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
unbill-storage = { path = "../unbill-storage" }
unbill-model = { path = "../unbill-model" }
async-trait.workspace = true
iroh.workspace = true
rand.workspace = true
